external-crates/move/crates/move-compiler/tests/move_check/parser/module_missing_lbrace.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/module_missing_lbrace.move:2:5
  │
2 │     fun f() {}
  │     ^^^
  │     │
  │     Unexpected 'fun'
  │     Expected '{' or ':' after the module name
